enter button dissapears and logo banner shrinks upon contracts appearing

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Document</title>
 </head>
 <body>
-    <img id= "something_witcher" src= "something_witcher_this_way_comes.png" class ="banner">
-    <div>
+    <div id="main">
+
     </div>
 </body>
 <script src="index.js"></script>
